k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: placement-backend
spec:
  type: ClusterIP
  selector:
    app: placement-backend
  ports:
    - port: 3000
      targetPort: 3000
