k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: placement-frontend
spec:
  type: LoadBalancer
  selector:
    app: placement-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  loadBalancerIP: ""  # Will be assigned by GCP
